Launchpad automatic translations update.

--- a/po/ms.po
+++ b/po/ms.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-05-13 21:45-0400\n"
-"PO-Revision-Date: 2014-06-09 04:51+0000\n"
+"PO-Revision-Date: 2014-07-15 22:23+0000\n"
 "Last-Translator: abuyop <Unknown>\n"
 "Language-Team: Malay <ms@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2014-06-10 06:39+0000\n"
-"X-Generator: Launchpad (build 17031)\n"
+"X-Launchpad-Export-Date: 2014-07-16 07:22+0000\n"
+"X-Generator: Launchpad (build 17112)\n"
 "Language: ms\n"
 
 #: ../menulibre.desktop.in.h:1
@@ -167,6 +167,18 @@ msgid ""
 "latest.html#exec-variables\n"
 "for a list of supported arguments."
 msgstr ""
+"\"Exec\": Program untuk dilakukan, berkemungkinan dengan argumen. Kunci Exec "
+"diperlukan\n"
+"jika DBusActivatable tidak ditetapkan ke benar. Walaupun jika "
+"DBusActivatable adalah benar, \n"
+"Exec seharunya dinyatakan unutk keserasian dengan pelaksanaan yang tidak "
+"memahami\n"
+"DBusActivatable. \n"
+"\n"
+"Sila rujuk\n"
+"http://standards.freedesktop.org/desktop-entry-spec/desktop-entry-spec-"
+"latest.html#exec-variables\n"
+"untuk senarai argumen yang disokong."
 
 #: ../data/ui/MenulibreWindow.ui.h:40
 msgid "Command"
@@ -212,6 +224,15 @@ msgid ""
 "If absent, a reasonable handling is up to implementations (assuming false,\n"
 "using StartupWMClass, etc.)."
 msgstr ""
+"\"StartupNotify\": Jika benar, ia DIKETAHUI aplikasi akan menghantar satu "
+"mesej\n"
+"\"remove\" bila bermula dengan pembolehubah persekitaran DESKTOP_STARTUP_ID\n"
+"yang ditetapkan. Jika palsu, ia DIKETAHUI aplikasi tidak berfungsi dengan\n"
+"pemberitahuan langsung (tidak menunjukkan mana-mana tetingkap, mengalami\n"
+"kerosakan bila menggunakan StartupWMClass, dll.). Jika tiada, satu "
+"pengendalian\n"
+"bersebab akan dilaksanakan (menganggap palsu, menggunakan StartupWMClass, "
+"dll.)."
 
 #: ../data/ui/MenulibreWindow.ui.h:56
 msgid "Use startup notification"
@@ -229,6 +250,14 @@ msgid ""
 "having a menu entry for it (there are tons of good reasons for this,\n"
 "including e.g. the netscape -remote, or kfmclient openURL kind of stuff)."
 msgstr ""
+"\"NoDisplay\": NoDisplay bermaksud \"aplikasi ini wujud, tetapi tidak "
+"dipapar dalam\n"
+"menu\". Ia berguna cth. dikaitkan aplikasi ini dengan jenis MIME, supaya ia "
+"dapat\n"
+"dilancarkan dari pengurus fail (atau apl lain) tanpa mempunyai masukan menu\n"
+"untuknya (ada banyak sebab kenapa ia dibuat, termasuklah cth. netscape -"
+"remote,\n"
+"atau jenis-jenis kfmclient openURL)."
 
 #: ../data/ui/MenulibreWindow.ui.h:63
 msgid "Hide from menus"
@@ -292,6 +321,14 @@ msgid ""
 "Possible values include: GNOME, KDE, LXDE, MATE, Razor, ROX, TDE, Unity, "
 "XFCE, Old"
 msgstr ""
+"\"NotShowIn\": Satu senarai rentetan yang mengenalpasti persekitaran tidak "
+"sepatutnya\n"
+"paparkan masukan desktop yang diberi. Hanya salah satu dari kunci ini, sama "
+"ada \n"
+"OnlyShowIn atau NotShowIn, boleh muncul di dalam kumpulan.\n"
+"\n"
+"Nilai yang mungkin termasuklah: GNOME, KDE, LXDE, MATE, Razor, ROX, TDE, "
+"Unity, XFCE, Old"
 
 #: ../data/ui/MenulibreWindow.ui.h:82
 msgid "Not Shown In"
@@ -330,6 +367,13 @@ msgid ""
 "not executable, the entry may be ignored (not be used in menus, for "
 "example). "
 msgstr ""
+"\"TryExec\": Laluan ka fail bolehlaku pada cakera yang digunakan untuk "
+"tentukan jika\n"
+"program sebenarnya dipasang. Jika laluan bukan laluan mutlak, fail dicari di "
+"dalam\n"
+"pembolehubah persekitaran $PATH. Jika fail tidak hadir atau ia tidak "
+"bolehlaku,\n"
+"maka masukan akan diabaikan (tidak diguna dalam menu, sebagai contoh). "
 
 #: ../data/ui/MenulibreWindow.ui.h:95
 msgid "Try Exec"
@@ -354,6 +398,12 @@ msgid ""
 "entries. The values are not meant for display, and should not be redundant\n"
 "with the values of Name or GenericName."
 msgstr ""
+"\"Keywords\": Senarai rentetan yang mungkin digunakan tambahan selain dari "
+"data\n"
+"meta lain untuk jelaskan masukan ini. Ia berguna cth. untuk membantu "
+"gelintar\n"
+"menerusi masukan. Nilai tidak bermaksud untuk paparan, dan tidak seharusnya\n"
+"bertindih dengan nilai Name atau GenericName."
 
 #: ../data/ui/MenulibreWindow.ui.h:104
 msgid "Keywords"
@@ -414,6 +464,16 @@ msgid ""
 "in their desktop files for compatibility with implementations that do not\n"
 "understand the DBusActivatable key."
 msgstr ""
+"\"DBusActivatable\": Satu nilai boolean yang menentukan jika pengaktifan D-"
+"Bus\n"
+"disokong untuk aplikasi ini. Jika kunci hilang, nilai lalai adalah palsu. "
+"Jika nilai\n"
+"adalah benar maka perlaksanaan seharusnya abaikan kunci Exec dan hantar\n"
+"satu mesej D-Bus untuk lancarkan aplikasi. Sila rujuk Pengaktifan D-Bus "
+"untuk\n"
+"maklumat lanjut bagaimana ia berfungsi. Aplikasi seharusnya melibatkan\n"
+"Exec= lines dalam fail desktop mereka untuk keserasian dengan perlaksanaan\n"
+"supaya dapat memahami kunci DBusActivatable."
 
 #: ../data/ui/MenulibreWindow.ui.h:125
 msgid "DBUS Activatable"
