--- a/po/fi.po
+++ b/po/fi.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-08-03 13:05-0400\n"
-"PO-Revision-Date: 2014-08-20 07:46+0000\n"
+"PO-Revision-Date: 2014-08-21 10:46+0000\n"
 "Last-Translator: Pasi Lallinaho <pasi@shimmerproject.org>\n"
 "Language-Team: Finnish <fi@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2014-08-21 06:38+0000\n"
+"X-Launchpad-Export-Date: 2014-08-22 07:11+0000\n"
 "X-Generator: Launchpad (build 17163)\n"
 "Language: fi\n"
 
@@ -169,8 +169,8 @@ msgid ""
 msgstr ""
 "\"Exec\": Sovellus joka suoritetaan mahdollisilla argumenteilla. Exec-kenttä "
 "tarvitaan\n"
-"jos DBusActivatable-arvo ei ole tosi. Vaikka DBusActivatable-arvo on tosi, "
-"Exec-kenttä\n"
+"jos DBusActivatable-arvo ei ole \"True\". Vaikka DBusActivatable-arvo on "
+"\"True\", Exec-kenttä\n"
 "tulisi määrittää yhteensopivuuden takia niitä toteutuksia varten jotka "
 "eivät\n"
 "ymmärrä DBusActivatable-arvoa.\n"
@@ -447,7 +447,7 @@ msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:125
 msgid "DBUS Activatable"
-msgstr ""
+msgstr "DBus-aktivoitava"
 
 #: ../data/ui/MenulibreWindow.ui.h:126
 msgid "Advanced"
