--- a/po/pt.po
+++ b/po/pt.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2014-08-03 13:05-0400\n"
-"PO-Revision-Date: 2014-04-19 01:05+0000\n"
-"Last-Translator: Sérgio Marques <Unknown>\n"
+"PO-Revision-Date: 2014-08-21 10:35+0000\n"
+"Last-Translator: David Pires <Unknown>\n"
 "Language-Team: Portuguese <pt@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2014-08-16 06:43+0000\n"
-"X-Generator: Launchpad (build 17156)\n"
+"X-Launchpad-Export-Date: 2014-08-22 07:11+0000\n"
+"X-Generator: Launchpad (build 17163)\n"
 
 #: ../menulibre.desktop.in.h:1
 msgid "Menu Editor"
@@ -223,6 +223,14 @@ msgid ""
 "If absent, a reasonable handling is up to implementations (assuming false,\n"
 "using StartupWMClass, etc.)."
 msgstr ""
+"\"StartupNotify\": Se for verdadeiro, SABE-SE que a aplicação irá enviar uma "
+"mensagem\n"
+"\"remover\" quando iniciada com a variável de ambiente DESKTOP_STARTUP_ID "
+"definida. Se\n"
+"for falso, SABE-SE que a aplicação não funciona com a notificação de "
+"inicialização\n"
+"de todo (não monstrado qualquer janela, bloqueando mesmo quando se utiliza "
+"StartupWMClass, etc)."
 
 #: ../data/ui/MenulibreWindow.ui.h:56
 msgid "Use startup notification"
@@ -240,6 +248,14 @@ msgid ""
 "having a menu entry for it (there are tons of good reasons for this,\n"
 "including e.g. the netscape -remote, or kfmclient openURL kind of stuff)."
 msgstr ""
+"\"NoDisplay\": significa \"esta aplicação existe, mas não a mostre nos\n"
+"menus\". Isto pode ser útil para, por exemplo, associar esta aplicação com "
+"tipos\n"
+"MIME, para que ela seja iniciada a partir de um gestor de ficheiros (ou "
+"outras aplicações), sem\n"
+"ter uma entrada de menu para ela (existem várias boas razões para isso,\n"
+"incluindo, por exemplo, o netscape -remote, ou coisas do tipo kfmclient "
+"openURL)."
 
 #: ../data/ui/MenulibreWindow.ui.h:63
 msgid "Hide from menus"
@@ -353,7 +369,7 @@ msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:95
 msgid "Try Exec"
-msgstr ""
+msgstr "Try Exec"
 
 #. Please see http://standards.freedesktop.org/desktop-entry-spec/latest/ar01s05.html
 #: ../data/ui/MenulibreWindow.ui.h:97
@@ -389,7 +405,7 @@ msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:108
 msgid "Startup WM Class"
-msgstr ""
+msgstr "Startup WM Class"
 
 #. Please see http://standards.freedesktop.org/desktop-entry-spec/latest/ar01s05.html
 #: ../data/ui/MenulibreWindow.ui.h:110
@@ -426,7 +442,7 @@ msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:125
 msgid "DBUS Activatable"
-msgstr ""
+msgstr "DBUS Activatable"
 
 #: ../data/ui/MenulibreWindow.ui.h:126
 msgid "Advanced"
@@ -739,6 +755,8 @@ msgstr "Não possui permissões para remover este ficheiro."
 #: ../menulibre/MenulibreApplication.py:2149
 msgid "Cannot add subdirectories to preinstalled system paths."
 msgstr ""
+"Não é possível adicionar subdiretórios para caminhos do sistema pré-"
+"instalados."
 
 #: ../menulibre/MenulibreApplication.py:2176
 msgid "New Launcher"
@@ -762,10 +780,12 @@ msgid ""
 "All changes since the last saved state will be lost and cannot be restored "
 "automatically."
 msgstr ""
+"Todas as alterações desde o último estado gravado serão perdidas e não "
+"poderão ser restauradas automaticamente."
 
 #: ../menulibre/MenulibreApplication.py:2700
 msgid "Are you sure you want to delete this separator?"
-msgstr ""
+msgstr "Tem certeza de que deseja apagar este separador?"
 
 #: ../menulibre/MenulibreApplication.py:2703
 #, python-format
