--- a/po/it.po
+++ b/po/it.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-08-03 13:05-0400\n"
-"PO-Revision-Date: 2014-08-20 10:56+0000\n"
-"Last-Translator: Simon Steinbeiß <ochosi@shimmerproject.org>\n"
+"PO-Revision-Date: 2014-08-28 13:47+0000\n"
+"Last-Translator: Man from Mars <manfrommars@libero.it>\n"
 "Language-Team: Italian <it@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2014-08-21 06:38+0000\n"
-"X-Generator: Launchpad (build 17163)\n"
+"X-Launchpad-Export-Date: 2014-08-30 07:28+0000\n"
+"X-Generator: Launchpad (build 17176)\n"
 "Language: it\n"
 
 #: ../menulibre.desktop.in.h:1
@@ -28,15 +28,15 @@ msgstr "Aggiungi e rimuovi applicazioni dal menù"
 
 #: ../data/ui/MenulibreWindow.ui.h:1
 msgid "Add _Launcher"
-msgstr ""
+msgstr "Aggiungi _Lanciatore"
 
 #: ../data/ui/MenulibreWindow.ui.h:2
 msgid "Add _Directory"
-msgstr ""
+msgstr "Aggiungi _Cartella"
 
 #: ../data/ui/MenulibreWindow.ui.h:3
 msgid "Add _Separator"
-msgstr "Aggiungi _separatore"
+msgstr "Aggiungi separatore"
 
 #: ../data/ui/MenulibreWindow.ui.h:4
 msgid "Icon Selection"
@@ -65,7 +65,7 @@ msgstr "File immagine"
 
 #: ../data/ui/MenulibreWindow.ui.h:9
 msgid "<b>Select an image</b>"
-msgstr ""
+msgstr "<b>Selezione un'immagine</b>"
 
 #: ../data/ui/MenulibreWindow.ui.h:10
 msgid "16px"
@@ -106,7 +106,7 @@ msgstr "_Aiuto"
 
 #: ../data/ui/MenulibreWindow.ui.h:19
 msgid "Save Launcher"
-msgstr ""
+msgstr "Salva Lanciatore"
 
 #: ../data/ui/MenulibreWindow.ui.h:20 ../menulibre/MenulibreApplication.py:420
 msgid "Undo"
@@ -126,7 +126,7 @@ msgstr "Cancella"
 
 #: ../data/ui/MenulibreWindow.ui.h:24
 msgid "Search terms…"
-msgstr ""
+msgstr "Cerca..."
 
 #: ../data/ui/MenulibreWindow.ui.h:25
 msgid "Move Up"
@@ -146,7 +146,7 @@ msgstr "Nome dell'applicazione"
 
 #: ../data/ui/MenulibreWindow.ui.h:29
 msgid "Application Comment"
-msgstr ""
+msgstr "Commento dell'applicazione"
 
 #: ../data/ui/MenulibreWindow.ui.h:30 ../menulibre/MenulibreApplication.py:848
 msgid "Description"
@@ -167,6 +167,17 @@ msgid ""
 "latest.html#exec-variables\n"
 "for a list of supported arguments."
 msgstr ""
+"\"Exec\": Programma da eseguire, eventualmente con argomenti. "
+"L'identificatore Exec è necessario\n"
+"se DBusActivatable non è impostato a true. Anche se DBusActivatable ha "
+"valore true, Exec dovrebbe\n"
+"essere specificato per compatibilità con le implementazioni che non "
+"utilizzano DBusActivatable. \n"
+"\n"
+"Consultare\n"
+"http://standards.freedesktop.org/desktop-entry-spec/desktop-entry-spec-"
+"latest.html#exec-variables\n"
+"per una lista degli argomenti supportati."
 
 #: ../data/ui/MenulibreWindow.ui.h:40
 msgid "Command"
@@ -175,7 +186,7 @@ msgstr "Comando"
 #. Please see http://standards.freedesktop.org/desktop-entry-spec/latest/ar01s05.html
 #: ../data/ui/MenulibreWindow.ui.h:42
 msgid "\"Path\": The working directory to run the program in."
-msgstr ""
+msgstr "\"Path\": il percorso di lavoro da cui lanciare il programma."
 
 #: ../data/ui/MenulibreWindow.ui.h:43
 msgid "Working Directory"
@@ -187,12 +198,14 @@ msgstr "Esplora ..."
 
 #: ../data/ui/MenulibreWindow.ui.h:45
 msgid "<b>Application Details</b>"
-msgstr ""
+msgstr "<b>Dettagli dell'applicazione</b>"
 
 #. Please see http://standards.freedesktop.org/desktop-entry-spec/latest/ar01s05.html
 #: ../data/ui/MenulibreWindow.ui.h:47
 msgid "\"Terminal\": Whether the program runs in a terminal window."
 msgstr ""
+"\"Terminal\": determina se il programma deve essere eseguito in una finestra "
+"di terminale."
 
 #: ../data/ui/MenulibreWindow.ui.h:48
 msgid "Run in terminal"
@@ -229,10 +242,17 @@ msgid ""
 "having a menu entry for it (there are tons of good reasons for this,\n"
 "including e.g. the netscape -remote, or kfmclient openURL kind of stuff)."
 msgstr ""
+"\"NoDisplay\": NoDisplay indica che l'applicazione esiste ma non deve essere "
+"mostrata nei menu.\n"
+"Ciò può essere utile per associare l'applicazione con i tipi MIME, così che "
+"sia lanciata dal file manager\n"
+"(o altre applicazioni), senza avere una voce di menu dedicata (ci sono molte "
+"buone ragioni per questo,\n"
+"inclusi cose come netscape -remote o kfmclient openURL)."
 
 #: ../data/ui/MenulibreWindow.ui.h:63
 msgid "Hide from menus"
-msgstr "Nascondi nel menu"
+msgstr "Nascondi dal menu"
 
 #: ../data/ui/MenulibreWindow.ui.h:64
 msgid "<b>Options</b>"
@@ -248,7 +268,7 @@ msgstr "Rimuovi"
 
 #: ../data/ui/MenulibreWindow.ui.h:67
 msgid "Clear"
-msgstr ""
+msgstr "Pulisci"
 
 #: ../data/ui/MenulibreWindow.ui.h:68
 msgid "Categories"
@@ -276,6 +296,8 @@ msgid ""
 "\"GenericName\": Generic name of the application, for example \"Web "
 "Browser\"."
 msgstr ""
+"\"GenericName\": Nome generico dell'applicazione, per esempio \"Browser "
+"Web\"."
 
 #: ../data/ui/MenulibreWindow.ui.h:75
 msgid "Generic Name"
@@ -292,6 +314,13 @@ msgid ""
 "Possible values include: GNOME, KDE, LXDE, MATE, Razor, ROX, TDE, Unity, "
 "XFCE, Old"
 msgstr ""
+"\"NotShowIn\": Una lista di stringhe che identificano gli ambienti che non "
+"dovrebbero mostrare un dato\n"
+"elemento di menu. Una sola delle chiavi, OnlyShowIn oppure NotShowIn, "
+"possono apparire in un gruppo.\n"
+"\n"
+"Possibili valori includono: GNOME, KDE, LXDE, MATE, Razor, ROX, TDE, Unity, "
+"XFCE, Old"
 
 #: ../data/ui/MenulibreWindow.ui.h:82
 msgid "Not Shown In"
@@ -307,6 +336,13 @@ msgid ""
 "Possible values include: GNOME, KDE, LXDE, MATE, Razor, ROX, TDE, Unity, "
 "XFCE, Old"
 msgstr ""
+"\"OnlyShowIn\": Una lista di stringhe che identificano gli ambienti che "
+"dovrebbero mostrare un dato\n"
+"elemento di menu. Una sola delle chiavi, OnlyShowIn oppure NotShowIn, "
+"possono apparire in un gruppo.\n"
+"\n"
+"Possibili valori includono: GNOME, KDE, LXDE, MATE, Razor, ROX, TDE, Unity, "
+"XFCE, Old"
 
 #: ../data/ui/MenulibreWindow.ui.h:89
 msgid "Only Shown In"
@@ -324,6 +360,13 @@ msgid ""
 "not executable, the entry may be ignored (not be used in menus, for "
 "example). "
 msgstr ""
+"\"TryExec\": Percorso di un file eseguibile su disco, usato per determinare "
+"se\n"
+"il programma è effettivamente installato. Se il percorso non è assoluto, il "
+"file\n"
+"è ricercato tramite la variabile d'ambiente $PATH. Se il file non esiste o "
+"non è\n"
+"eseguibile, la voce può essere ignorata (non usata nei menu, ad esempio). "
 
 #: ../data/ui/MenulibreWindow.ui.h:95
 msgid "Try Exec"
@@ -332,7 +375,7 @@ msgstr ""
 #. Please see http://standards.freedesktop.org/desktop-entry-spec/latest/ar01s05.html
 #: ../data/ui/MenulibreWindow.ui.h:97
 msgid "\"MimeType\": The MIME type(s) supported by this application."
-msgstr ""
+msgstr "\"MimeType\": I tipi MIME supportati da questa applicazione."
 
 #: ../data/ui/MenulibreWindow.ui.h:98
 msgid "Mimetypes"
@@ -348,6 +391,12 @@ msgid ""
 "entries. The values are not meant for display, and should not be redundant\n"
 "with the values of Name or GenericName."
 msgstr ""
+"\"Keywords\": Una lista di stringhe che possono essere usate in aggiunta ad "
+"altri metadati\n"
+"per descrivere questo elemento.\n"
+"Ciò può essere utile, ad esempio, per facilitare la ricerca tra le voci.\n"
+"I valori non sono da visualizzare e non dovrebbero replicare quelli del Name "
+"o del GenericName."
 
 #: ../data/ui/MenulibreWindow.ui.h:104
 msgid "Keywords"
@@ -363,7 +412,7 @@ msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:108
 msgid "Startup WM Class"
-msgstr ""
+msgstr "Startup WM Class"
 
 #. Please see http://standards.freedesktop.org/desktop-entry-spec/latest/ar01s05.html
 #: ../data/ui/MenulibreWindow.ui.h:110
@@ -397,6 +446,16 @@ msgid ""
 "in their desktop files for compatibility with implementations that do not\n"
 "understand the DBusActivatable key."
 msgstr ""
+"\"DBusActivatable\": Valore booleano che specifica se l'attivazione D-Bus è "
+"supportata per questa applicazione.\n"
+"Se la chiave manca, il valore predefinito è false. Se il valore è true, le "
+"implementazioni dovrebbero ignorare il\n"
+"comando Exec ed inviare un messaggio D-Bus per lanciare l'applicazione. "
+"Consultare D-Bus Activation per\n"
+"maggiori informazioni sul funzionamento. Le applicazioni dovrebbero ancora "
+"includere una riga Exec= nei\n"
+"loro file .desktop per compatibilità con le implementazioni che non "
+"supportano la chiave DBusActivatable."
 
 #: ../data/ui/MenulibreWindow.ui.h:125
 msgid "DBUS Activatable"
@@ -408,15 +467,15 @@ msgstr "Avanzato"
 
 #: ../data/ui/MenulibreWindow.ui.h:127
 msgid "<small><i>Filename</i></small>"
-msgstr ""
+msgstr "<small><i>Nome file</i></small>"
 
 #: ../data/ui/MenulibreWindow.ui.h:128
 msgid "Select an icon…"
-msgstr ""
+msgstr "Seleziona un'icona…"
 
 #: ../data/ui/MenulibreWindow.ui.h:129
 msgid "<b>Select an icon</b>"
-msgstr ""
+msgstr "Seleziona un'icona"
 
 #: ../data/ui/MenulibreWindow.ui.h:130
 msgid "Search"
@@ -491,7 +550,7 @@ msgstr "Configurazione dell'utenza"
 
 #: ../menulibre/MenulibreApplication.py:73
 msgid "Hardware configuration"
-msgstr ""
+msgstr "Configurazione hardware"
 
 #. GNOME Specific
 #: ../menulibre/MenulibreApplication.py:75
@@ -504,44 +563,44 @@ msgstr "GTK+ applicazione"
 
 #: ../menulibre/MenulibreApplication.py:77
 msgid "GNOME user configuration"
-msgstr ""
+msgstr "Configurazione utente GNOME"
 
 #: ../menulibre/MenulibreApplication.py:78
 msgid "GNOME hardware configuration"
-msgstr ""
+msgstr "Configurazione hardware GNOME"
 
 #: ../menulibre/MenulibreApplication.py:79
 #: ../menulibre/MenulibreApplication.py:80
 msgid "GNOME system configuration"
-msgstr ""
+msgstr "Configurazione sistema GNOME"
 
 #. Xfce Specific
 #: ../menulibre/MenulibreApplication.py:82
 #: ../menulibre/MenulibreApplication.py:83
 msgid "Xfce menu item"
-msgstr ""
+msgstr "Elemento di menu Xfce"
 
 #: ../menulibre/MenulibreApplication.py:84
 msgid "Xfce toplevel menu item"
-msgstr ""
+msgstr "Elemento principale di menu Xfce"
 
 #: ../menulibre/MenulibreApplication.py:85
 msgid "Xfce user configuration"
-msgstr ""
+msgstr "Configurazione utente Xfce"
 
 #: ../menulibre/MenulibreApplication.py:86
 msgid "Xfce hardware configuration"
-msgstr ""
+msgstr "Configurazione hardware Xfce"
 
 #: ../menulibre/MenulibreApplication.py:87
 #: ../menulibre/MenulibreApplication.py:88
 msgid "Xfce system configuration"
-msgstr ""
+msgstr "Configurazione sistema Xfce"
 
 #: ../menulibre/MenulibreApplication.py:136
 #: ../menulibre/MenulibreApplication.py:181
 msgid "Other"
-msgstr ""
+msgstr "Altro"
 
 #: ../menulibre/MenulibreApplication.py:391
 msgid "Add _Launcher..."
@@ -639,7 +698,7 @@ msgstr "Nome Categoria"
 
 #: ../menulibre/MenulibreApplication.py:927
 msgid "This Entry"
-msgstr ""
+msgstr "Questo elemento"
 
 #: ../menulibre/MenulibreApplication.py:982
 msgid "New Shortcut"
@@ -648,11 +707,11 @@ msgstr "Nuova scorciatoia"
 #. Unsaved changes
 #: ../menulibre/MenulibreApplication.py:1032
 msgid "Do you want to save the changes before closing?"
-msgstr ""
+msgstr "Vuoi salvare i cambiamenti prima di chiudere?"
 
 #: ../menulibre/MenulibreApplication.py:1033
 msgid "If you don't save the launcher, all the changes will be lost.'"
-msgstr ""
+msgstr "Se non salvi il lanciatore tutti i cambiamenti saranno persi."
 
 #: ../menulibre/MenulibreApplication.py:1040
 #: ../menulibre/MenulibreApplication.py:1484
@@ -679,42 +738,45 @@ msgstr "Immagini"
 
 #: ../menulibre/MenulibreApplication.py:1284
 msgid "Select a working directory..."
-msgstr ""
+msgstr "Seleziona una directory di lavoro..."
 
 #: ../menulibre/MenulibreApplication.py:1288
 msgid "Select an executable..."
-msgstr ""
+msgstr "Seleziona un eseguibile"
 
 #. Display a dialog saying this item is missing
 #: ../menulibre/MenulibreApplication.py:1448
 msgid "No Longer Installed"
-msgstr ""
+msgstr "Non più installato"
 
 #: ../menulibre/MenulibreApplication.py:1449
 msgid ""
 "This launcher has been removed from the system.\n"
 "Selecting the next available item."
 msgstr ""
+"Il lanciatore è stato rimosso dal sistema.\n"
+"Seleziono il successivo elemento disponibile."
 
 #: ../menulibre/MenulibreApplication.py:1475
 msgid "Do you want to save the changes before leaving this launcher?"
-msgstr ""
+msgstr "Vuoi salvare le modifiche prima di abbandonare questo lanciatore?"
 
 #: ../menulibre/MenulibreApplication.py:1477
 msgid "If you don't save the launcher, all the changes will be lost."
-msgstr ""
+msgstr "Se non salvi il lanciatore tutti i cambiamenti saranno persi."
 
 #: ../menulibre/MenulibreApplication.py:1716
 msgid "You do not have permission to delete this file."
-msgstr ""
+msgstr "Non hai i permessi per cancellare questo file."
 
 #: ../menulibre/MenulibreApplication.py:2149
 msgid "Cannot add subdirectories to preinstalled system paths."
 msgstr ""
+"Impossibile aggiungere sottocartelle ai percorsi di sistema preinstallati."
 
 #: ../menulibre/MenulibreApplication.py:2176
 msgid "New Launcher"
-msgstr ""
+msgstr "Nuovo lanciatore"
 
 #: ../menulibre/MenulibreApplication.py:2227
 msgid "New Directory"
@@ -722,22 +784,24 @@ msgstr "Nuova Directory"
 
 #: ../menulibre/MenulibreApplication.py:2677
 msgid "Are you sure you want to restore this launcher?"
-msgstr ""
+msgstr "Sei sicuro di voler ripristinare questo lanciatore?"
 
 #: ../menulibre/MenulibreApplication.py:2683
 #: ../menulibre/MenulibreApplication.py:2684
 msgid "Restore Launcher"
-msgstr ""
+msgstr "Ripristina il lanciatore"
 
 #: ../menulibre/MenulibreApplication.py:2685
 msgid ""
 "All changes since the last saved state will be lost and cannot be restored "
 "automatically."
 msgstr ""
+"Tutte le modifiche dall'ultimo stato salvato saranno perse e non potranno "
+"essere ripristinate automaticamente."
 
 #: ../menulibre/MenulibreApplication.py:2700
 msgid "Are you sure you want to delete this separator?"
-msgstr ""
+msgstr "Sei sicuro di voler cancellare questo separatore?"
 
 #: ../menulibre/MenulibreApplication.py:2703
 #, python-format
@@ -750,7 +814,7 @@ msgstr "Questa azione non può essere annullata."
 
 #: ../menulibre/MenulibreApplication.py:2783
 msgid "Do you want to read the MenuLibre manual online?"
-msgstr ""
+msgstr "Vuoi leggere il manuale di MenuLibre online?"
 
 #: ../menulibre/MenulibreApplication.py:2789
 msgid "Read Online"
@@ -765,20 +829,22 @@ msgid ""
 "You will be redirected to the documentation website where the help pages are "
 "maintained."
 msgstr ""
+"Sarai indirizzato verso il sito di documentazione dove le pagine di aiuto "
+"sono tenute aggiornate."
 
 #. Populate the AboutDialog with all the relevant details.
 #: ../menulibre/MenulibreApplication.py:2810
 msgid "About MenuLibre"
-msgstr ""
+msgstr "A proposito di MenuLibre"
 
 #: ../menulibre/MenulibreApplication.py:2813
 msgid "Copyright © 2012-2014 Sean Davis"
-msgstr ""
+msgstr "Copyright © 2012-2014 Sean Davis"
 
 #: ../menulibre/MenulibreXdg.py:53
 msgid "New Menu Item"
-msgstr ""
+msgstr "Nuovo elemento di menu"
 
 #: ../menulibre/MenulibreXdg.py:55
 msgid "A small descriptive blurb about this application."
-msgstr ""
+msgstr "Un breve testo descrittivo di questa applicazione."
