--- a/po/eu.po
+++ b/po/eu.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2014-09-02 05:50-0400\n"
-"PO-Revision-Date: 2014-06-16 20:07+0000\n"
+"PO-Revision-Date: 2014-09-03 19:42+0000\n"
 "Last-Translator: Ibai Oihanguren Sala <Unknown>\n"
 "Language-Team: Basque <eu@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2014-09-03 06:55+0000\n"
+"X-Launchpad-Export-Date: 2014-09-04 08:55+0000\n"
 "X-Generator: Launchpad (build 17196)\n"
 
 #: ../menulibre.desktop.in.h:1
@@ -166,7 +166,7 @@ msgstr "Agindua"
 
 #: ../data/ui/MenulibreWindow.ui.h:34
 msgid "The working directory."
-msgstr ""
+msgstr "Laneko direktorioa."
 
 #: ../data/ui/MenulibreWindow.ui.h:35
 msgid "Working Directory"
@@ -182,7 +182,7 @@ msgstr "<b>Aplikazioaren xehetasunak</b>"
 
 #: ../data/ui/MenulibreWindow.ui.h:38
 msgid "If set to \"True\", the program will be ran in a terminal window."
-msgstr ""
+msgstr "\"True\" balioarekin, programa terminal leiho batean exekutatuko da."
 
 #: ../data/ui/MenulibreWindow.ui.h:39
 msgid "Run in terminal"
@@ -246,7 +246,7 @@ msgstr "Ekintzak"
 
 #: ../data/ui/MenulibreWindow.ui.h:53
 msgid "Generic name of the application, for example \"Web Browser\"."
-msgstr ""
+msgstr "Aplikazioaren izen generikoa, esaterako, \"Web nabigatzailea\"."
 
 #: ../data/ui/MenulibreWindow.ui.h:54
 msgid "Generic Name"
@@ -290,7 +290,7 @@ msgstr "Exekuzio-proba"
 
 #: ../data/ui/MenulibreWindow.ui.h:63
 msgid "The MIME type(s) supported by this application."
-msgstr ""
+msgstr "Aplikazioak onartutako MIME mota(k)."
 
 #: ../data/ui/MenulibreWindow.ui.h:64
 msgid "Mimetypes"
