--- a/po/nl.po
+++ b/po/nl.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2014-09-02 05:50-0400\n"
-"PO-Revision-Date: 2014-03-03 18:24+0000\n"
+"PO-Revision-Date: 2014-09-05 09:23+0000\n"
 "Last-Translator: Pjotr12345 <Unknown>\n"
 "Language-Team: Dutch <nl@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2014-09-03 06:55+0000\n"
+"X-Launchpad-Export-Date: 2014-09-06 07:36+0000\n"
 "X-Generator: Launchpad (build 17196)\n"
 
 #: ../menulibre.desktop.in.h:1
@@ -166,7 +166,7 @@ msgstr "Opdracht"
 
 #: ../data/ui/MenulibreWindow.ui.h:34
 msgid "The working directory."
-msgstr ""
+msgstr "De werkmap."
 
 #: ../data/ui/MenulibreWindow.ui.h:35
 msgid "Working Directory"
@@ -246,7 +246,7 @@ msgstr "Acties"
 
 #: ../data/ui/MenulibreWindow.ui.h:53
 msgid "Generic name of the application, for example \"Web Browser\"."
-msgstr ""
+msgstr "Generieke naam van de toepassing, bijvoorbeeld 'Tekstverwerker'."
 
 #: ../data/ui/MenulibreWindow.ui.h:54
 msgid "Generic Name"
@@ -291,6 +291,7 @@ msgstr "Probeer Exec"
 #: ../data/ui/MenulibreWindow.ui.h:63
 msgid "The MIME type(s) supported by this application."
 msgstr ""
+"De bestandsoorten (MIME) die door deze toepassing worden ondersteund."
 
 #: ../data/ui/MenulibreWindow.ui.h:64
 msgid "Mimetypes"
