--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-09-02 05:50-0400\n"
-"PO-Revision-Date: 2014-03-28 04:04+0000\n"
-"Last-Translator: leo523 <Unknown>\n"
+"PO-Revision-Date: 2014-09-05 17:54+0000\n"
+"Last-Translator: Eduardo Júnio S. Macêdo <eduardojuniosm@gmail.com>\n"
 "Language-Team: Brazilian Portuguese <pt_BR@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2014-09-03 06:56+0000\n"
+"X-Launchpad-Export-Date: 2014-09-06 07:36+0000\n"
 "X-Generator: Launchpad (build 17196)\n"
 "Language: pt_BR\n"
 
@@ -28,7 +28,7 @@ msgstr "Adicione ou remove programas do menu"
 
 #: ../data/ui/MenulibreWindow.ui.h:1
 msgid "Add _Launcher"
-msgstr ""
+msgstr "Adicionar _lançador"
 
 #: ../data/ui/MenulibreWindow.ui.h:2
 msgid "Add _Directory"
@@ -106,7 +106,7 @@ msgstr "_Ajuda"
 
 #: ../data/ui/MenulibreWindow.ui.h:19
 msgid "Save Launcher"
-msgstr ""
+msgstr "Salvar lançador"
 
 #: ../data/ui/MenulibreWindow.ui.h:20 ../menulibre/MenulibreApplication.py:420
 msgid "Undo"
@@ -122,11 +122,11 @@ msgstr "Reverter"
 
 #: ../data/ui/MenulibreWindow.ui.h:23 ../menulibre/MenulibreApplication.py:441
 msgid "Delete"
-msgstr ""
+msgstr "Deletar"
 
 #: ../data/ui/MenulibreWindow.ui.h:24
 msgid "Search terms…"
-msgstr ""
+msgstr "Procurar termos…"
 
 #: ../data/ui/MenulibreWindow.ui.h:25
 msgid "Move Up"
@@ -142,15 +142,15 @@ msgstr "<big><b>Nome do Aplicativo</b></big>"
 
 #: ../data/ui/MenulibreWindow.ui.h:28
 msgid "Application Name"
-msgstr ""
+msgstr "Nome do aplicativo"
 
 #: ../data/ui/MenulibreWindow.ui.h:29
 msgid "Application Comment"
-msgstr ""
+msgstr "Comentário do aplicativo"
 
 #: ../data/ui/MenulibreWindow.ui.h:30 ../menulibre/MenulibreApplication.py:848
 msgid "Description"
-msgstr ""
+msgstr "Descrição"
 
 #: ../data/ui/MenulibreWindow.ui.h:31
 msgid ""
@@ -167,7 +167,7 @@ msgstr "Comando"
 
 #: ../data/ui/MenulibreWindow.ui.h:34
 msgid "The working directory."
-msgstr ""
+msgstr "O diretório de trabalho."
 
 #: ../data/ui/MenulibreWindow.ui.h:35
 msgid "Working Directory"
@@ -175,15 +175,16 @@ msgstr "Diretório de Trabalho"
 
 #: ../data/ui/MenulibreWindow.ui.h:36
 msgid "Browse…"
-msgstr ""
+msgstr "Procurar..."
 
 #: ../data/ui/MenulibreWindow.ui.h:37
 msgid "<b>Application Details</b>"
-msgstr ""
+msgstr "<b>Detalhes do aplicativo</b>"
 
 #: ../data/ui/MenulibreWindow.ui.h:38
 msgid "If set to \"True\", the program will be ran in a terminal window."
 msgstr ""
+"Se definido como \"Verdadeiro\", o aplicativo será executado em um terminal."
 
 #: ../data/ui/MenulibreWindow.ui.h:39
 msgid "Run in terminal"
@@ -215,15 +216,15 @@ msgstr "<b>Opções</b>"
 
 #: ../data/ui/MenulibreWindow.ui.h:45
 msgid "Add"
-msgstr ""
+msgstr "Adicionar"
 
 #: ../data/ui/MenulibreWindow.ui.h:46
 msgid "Remove"
-msgstr ""
+msgstr "Remover"
 
 #: ../data/ui/MenulibreWindow.ui.h:47
 msgid "Clear"
-msgstr ""
+msgstr "Limpar"
 
 #: ../data/ui/MenulibreWindow.ui.h:48
 msgid "Categories"
@@ -239,19 +240,19 @@ msgstr "Nome"
 
 #: ../data/ui/MenulibreWindow.ui.h:51
 msgid "Action Name"
-msgstr ""
+msgstr "Nome da ação"
 
 #: ../data/ui/MenulibreWindow.ui.h:52
 msgid "Actions"
-msgstr ""
+msgstr "Ações"
 
 #: ../data/ui/MenulibreWindow.ui.h:53
 msgid "Generic name of the application, for example \"Web Browser\"."
-msgstr ""
+msgstr "Nome genérico do aplicativo, por exemplo \"Navegador web\"."
 
 #: ../data/ui/MenulibreWindow.ui.h:54
 msgid "Generic Name"
-msgstr ""
+msgstr "Nome genérico"
 
 #: ../data/ui/MenulibreWindow.ui.h:55
 msgid ""
@@ -715,7 +716,7 @@ msgstr ""
 
 #: ../menulibre/MenulibreXdg.py:53
 msgid "New Menu Item"
-msgstr ""
+msgstr "Novo item de menu"
 
 #: ../menulibre/MenulibreXdg.py:55
 msgid "A small descriptive blurb about this application."
