Launchpad automatic translations update.

--- a/po/de.po
+++ b/po/de.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2014-09-02 05:50-0400\n"
-"PO-Revision-Date: 2014-06-05 15:45+0000\n"
+"PO-Revision-Date: 2014-09-15 14:43+0000\n"
 "Last-Translator: Tobias Bannert <Unknown>\n"
 "Language-Team: German <de@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2014-09-03 06:55+0000\n"
+"X-Launchpad-Export-Date: 2014-09-16 08:31+0000\n"
 "X-Generator: Launchpad (build 17196)\n"
 
 #: ../menulibre.desktop.in.h:1
@@ -189,8 +189,8 @@ msgstr "<b>Anwendungsdetails</b>"
 #: ../data/ui/MenulibreWindow.ui.h:38
 msgid "If set to \"True\", the program will be ran in a terminal window."
 msgstr ""
-"Wenn dieser Wert auf \"Wahr\" gesetzt wird, wird das Programm in einem "
-"Terminal-Fenster ausgeführt."
+"Wenn auf »AN« gestellt, wird das Programm in einem Terminal-Fenster "
+"gestartet."
 
 #: ../data/ui/MenulibreWindow.ui.h:39
 msgid "Run in terminal"
@@ -201,9 +201,9 @@ msgid ""
 "If set to \"True\", a startup notification is sent. Usually means that a "
 "busy cursor is shown while the application launches."
 msgstr ""
-"Wenn dieser Wert auf \"Wahr\" gesetzt wird, wird eine Startup-"
-"Benachrichtigung gesendet. Das bedeutet üblicherweise, dass der Cursor als "
-"\"beschäftigt\" angezeigt wird, während das Programm startet."
+"Wenn auf »AN« gestellt, wird eine Startbenachrichtigung gesendet. Das "
+"bedeutet üblicherweise, dass der Mauszeiger als »beschäftigt« angezeigt "
+"wird, während das Programm startet."
 
 #: ../data/ui/MenulibreWindow.ui.h:41
 msgid "Use startup notification"
@@ -260,7 +260,7 @@ msgstr "Aktionen"
 
 #: ../data/ui/MenulibreWindow.ui.h:53
 msgid "Generic name of the application, for example \"Web Browser\"."
-msgstr "Allgemeine Bezeichnung für die Anwendung, etwa \"Internetbrowser\"."
+msgstr "Allgemeiner Name der Anwendung, z.B. »Internetbrowser«."
 
 #: ../data/ui/MenulibreWindow.ui.h:54
 msgid "Generic Name"
@@ -273,9 +273,9 @@ msgid ""
 "Possible values include: GNOME, KDE, LXDE, MATE, Razor, ROX, TDE, Unity, "
 "XFCE, Old"
 msgstr ""
-"Eine Liste von Desktopumgebungen, die diesen Eintrag nicht anzeigen sollen. "
-"Diese Option kann nur verwendet werden, wenn der \"OnlyShowIn\" Schlüssel "
-"nicht gesetzt wurde.\n"
+"Eine Liste von Arbeitsumgebungen, die diesen Eintrag nicht anzeigen sollen. "
+"Diese Option kann nur verwendet werden, wenn »Nur anzeigen in« nicht "
+"verwendet wird.\n"
 "Mögliche Werte sind: GNOME, KDE, LXDE, MATE, Razor, ROX, TDE, Unity, XFCE, "
 "Old"
 
@@ -291,9 +291,9 @@ msgid ""
 "Possible values include: GNOME, KDE, LXDE, MATE, Razor, ROX, TDE, Unity, "
 "XFCE, Old"
 msgstr ""
-"Eine Liste von Desktopumgebungen, die diesen Eintrag anzeigen sollen. Diese "
-"Option kann nur verwendet werden, wenn der \"NotShowIn\" Schlüssel nicht "
-"gesetzt wurde.\n"
+"Eine Liste von Arbeitsumgebungen, die diesen Eintrag anzeigen sollen. Diese "
+"Option kann nur verwendet werden, wenn »Nicht anzeigen in« nicht verwendet "
+"wird.\n"
 "Mögliche Werte sind: GNOME, KDE, LXDE, MATE, Razor, ROX, TDE, Unity, XFCE, "
 "Old"
 
@@ -307,7 +307,7 @@ msgid ""
 "file is not present or is not executable, this entry may not be shown in a "
 "menu."
 msgstr ""
-"Pfad zur ausführbaren Datei um festzustellen, ob das Programm installiert "
+"Pfad zur ausführbaren Datei, um festzustellen, ob das Programm installiert "
 "ist. Wenn die Datei nicht vorhanden ist oder nicht ausführbar ist, wird "
 "dieser Eintrag im Menü nicht angezeigt."
 
@@ -318,7 +318,7 @@ msgstr "Abfragebefehl"
 #: ../data/ui/MenulibreWindow.ui.h:63
 msgid "The MIME type(s) supported by this application."
 msgstr ""
-"Die Dateitypen (MIME Typen), die von dieser Anwendung unterstützt werden."
+"Die Dateitypen (MIME-Typen), die von dieser Anwendung unterstützt werden."
 
 #: ../data/ui/MenulibreWindow.ui.h:64
 msgid "Mimetypes"
@@ -344,9 +344,9 @@ msgid ""
 "If specified, the application will be requested to use the string as a WM "
 "class or a WM name hint at least in one window."
 msgstr ""
-"Wenn angegeben, wird diese Anwendung die Zeichenfolge als Fenstermanager "
-"Klasse (WM class) oder als Fenstermanager Hinweis (WM hint) in mindestens "
-"einem Fenster verwenden."
+"Wenn angegeben, wird diese Anwendung aufgefordert, die Zeichenkette als "
+"Fensterverwaltungsklasse oder -namenshinweis, in wenigstens einem Fenster zu "
+"benutzen."
 
 #: ../data/ui/MenulibreWindow.ui.h:68
 msgid "Startup WM Class"
@@ -357,8 +357,8 @@ msgid ""
 "If set to \"True\", the result for the user is equivalent to the .desktop "
 "file not existing at all."
 msgstr ""
-"Wenn dieser Wert auf \"Wahr\" gesetzt wird, ist das Ergebnis für den User "
-"äquivalent zum Fehlen der .desktop Datei."
+"Wenn auf »AN« gestellt, ist das Ergebnis, für den Benutzer, entsprechend zur "
+".desktop-Datei, die nicht vorhanden ist."
 
 #: ../data/ui/MenulibreWindow.ui.h:70
 msgid "Hidden"
@@ -371,9 +371,9 @@ msgid ""
 "See http://standards.freedesktop.org/desktop-entry-spec/latest/ar01s07.html "
 "for more information."
 msgstr ""
-"Diesen Wert auf \"Wahr\" setzen wenn D-Bus Aktivierung für diese Anwendung "
+"Diesen Wert auf »AN« stellen, wenn D-Bus Aktivierung, für diese Anwendung, "
 "unterstützt wird und wenn sie verwendet werden soll.\n"
-"Für mehr Information, siehe http://standards.freedesktop.org/desktop-entry-"
+"Für weitere Information: http://standards.freedesktop.org/desktop-entry-"
 "spec/latest/ar01s07.html"
 
 #: ../data/ui/MenulibreWindow.ui.h:73
